Added datasources module (essentially a dataset provisioning service) to this project